Prevent search field disappearing on mobile view

--- a/projects/sandbox/src/app/dataset-content-summary/dataset-content-summary.component.scss
+++ b/projects/sandbox/src/app/dataset-content-summary/dataset-content-summary.component.scss
@@ -66,8 +66,7 @@ canvas {
 .search-header {
   align-items: center;
   display: flex;
-  padding-top: 0;
-  margin-top: -4px;
+  padding: 2em;
 
   input {
     padding: 4px;
@@ -244,6 +243,10 @@ canvas {
   &.highlighted-sort.active::after,
   .highlighted-sort {
     color: $eu-light-orange;
+  }
+
+  &.search-header {
+    display: flex;
   }
 }
 
@@ -507,6 +510,8 @@ canvas {
     &.search-header {
       display: flex;
       grid-column: 1/3;
+      margin-top: -4px;
+      padding-top: 0;
     }
   }
 
